# datetime-bench

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
reports/datetime_bench_v0.1/: LEARNINGS.md  cost_report.csv  error_taxonomy.csv  format_comparison.csv  primary_results.csv  results_all.csv  summary.md
reports/datetime_bench_v0.1.5/: CHANGES_FROM_v0.1.md  LEARNINGS.md  cost_report.csv  error_taxonomy.csv  format_comparison.csv  primary_results.csv  results_all.csv  summary.md
reports/datetime_bench_v0.2/: CHANGES_FROM_v0.1.5.md  LEARNINGS.md  PROGRAM_REPORT.md  cost_report.csv  error_taxonomy.csv  format_comparison.csv  primary_results.csv  results_all.csv  summary.md
reports/datetime_bench_v0.3/: LEARNINGS.md  PROGRAM_REPORT.md  cost_report.csv  epoch_summary.csv  error_taxonomy.csv  format_comparison.csv  format_comparison_string_only.csv  input_variant_summary.csv  primary_results.csv  summary.md
scripts/: render_readme_figures.py
src/datetime_bench/: __init__.py  analysis.py  config.py  few_shot.py  formats.py  layout.py  openrouter.py  rerun.py  rescore.py  runner.py  types.py
src/datetime_bench/evaluation/: __init__.py  budget.py  parsers.py  scoring.py
src/datetime_bench/tasks/: __init__.py  base.py  direct_generation.py  edge_cases.py  extraction.py  format_conversion.py  multi_hop.py  multiple_choice.py  parsing_normalization.py  temporal_arithmetic.py  variants.py
tests/: test_contracts.py  test_v0_3_tasks.py
