[project]
name = "datetime-bench"
version = "0.2.0"
description = "LLM benchmark for datetime format generation reliability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "tabulate>=0.9.0",
]

[project.scripts]
datetime-bench = "datetime_bench.runner:main"
datetime-bench-rerun = "datetime_bench.rerun:main"
datetime-bench-few-shot = "datetime_bench.few_shot:main"
datetime-bench-rescore = "datetime_bench.rescore:main"

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datetime_bench"]
